# FinRobot

./: .env.example  .gitignore  .replit  AGENTS.md  DEPLOYMENT_README.md  FINAL_REPORT.txt  FinRobot.ipynb  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS.md  IMPROVEMENTS_SUMMARY.md  MOONSHOT_DAEMON_GUIDE.md  MULTI_STRATEGY_PORTFOLIO_PLAN.md  OAI_CONFIG_LIST  QUICK_START.md  README.md  README_IMPROVEMENTS.md  backtest_results.jsonl  config.py  config_api_keys  continuous_backtest.py  daemon.out  daemon.pid  daemon_config.json  daemon_service.py  daemon_state.json  deploy.py  dsCryptopanic.py  dsTimeSeries.py  dsYfinance.py  feedback_loop_state.json  groq_fx_test.py  health_check.py  historical_data.db  hyperliquid_executor.py  hyperliquid_monitor.py  hyperliquid_state.json  hyperliquid_strategies.py  hyperliquid_trader.py  marketdepth.py  mt5_windows_agent.ps1  (+9 more)
backtest_logs/: backtest_results.jsonl  best_parameters.json
finrobot/: __init__.py  backtesting.py  cli.py  config.py  ctrader_auth.py  ctrader_executor.py  data_sources.py  feedback_loop.py  genetic_optimizer.py  grid.py  harmonic_patterns.py  harmonics.py  hft.py  historical_cache.py  hot_reload.py  indicators.py  mt5_executor.py  mt5_remote_client.py  multi_strategy_engine.py  opencode_integration.py  portfolio_manager.py  smart_money_concepts.py
freetier/: README.md  aGemini.sh  aGroq.sh  cloudflare.py  config.py  cryptopanic.py  datasource.py  dsAlphaVantage.py  dsBinance.py  dsCryptopanic.py  dsOKX.py  dsTimeSeries.py  dsYfinance.py  gemini.py  groq_crypto.py  groq_stock.py  marketdepth.py  modelCloudflare.py  (+13 more)
(+98 files in other folders)
