[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "finrobot"
version = "0.1.0"
description = "Modular algorithmic trading toolkit"
requires-python = ">=3.10"
dependencies = [
  "python-dotenv",
  "requests",
  "pandas",
  "numpy",
  "matplotlib",
  "plotly",
  "scikit-learn",
  "tensorflow",
  "pyharmonics",
  "openai",
  "yfinance",
  "MetaTrader5"
]

[project.scripts]
finrobot = "finrobot.cli:main"
